tests/NormalTests/paczka1/small_fuzzy/66330537.err
Error in line 8: HnDj A712 87,1
Error in line 9: HnDj A490 92,9
Error in line 10: iYF A500 4,3
Error in line 13: iYF A490 92,4
